# tokyo

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
apps/codegen-cli/: Cargo.toml
apps/codegen-cli/src/: api_diff.rs  cli.rs  config.rs  constants.rs  dev.rs  emit.rs  error.rs  generate.rs  git.rs  import.rs  init.rs  main.rs  manifest.rs  openapi.rs  prelude.rs  routes.rs  transaction.rs  update_branch.rs
apps/codegen-cli/tests/: cli.rs  docs.rs  openapi.rs
crates/cli-runtime/: Cargo.toml
crates/cli-runtime/src/: achieve.rs  body.rs  client.rs  config.rs  error.rs  lib.rs  oauth.rs  output.rs  profile.rs  route.rs  scenario.rs  schema.rs  session.rs  update.rs
crates/cli-runtime/src/oauth/: acquisition.rs  discovery.rs  storage.rs  tests.rs
crates/codegen/codegen-engine/: Cargo.toml
crates/codegen/codegen-engine/src/: lib.rs
crates/codegen/emit-cli/: Cargo.toml
crates/codegen/emit-cli/src/: lib.rs  naming.rs  schema.rs  types.rs
crates/codegen/emit-cli/src/commands/: auth.rs  endpoint.rs  mod.rs  program.rs  resources.rs
crates/codegen/emit-cli/src/templates/: commands_mod.rs  config.rs  custom.rs  guidance.rs  main.rs  middleware.rs  mod.rs  presentation.rs  project_files.rs  skills.rs
crates/codegen/emit-cli/tests/: compile_gate.rs  golden.rs
crates/codegen/emit-cli/tests/golden/auth/: README.md
crates/codegen/emit-cli/tests/golden/auth/.cursor/skills/tokyo-achieve-outcomes/: SKILL.md
crates/codegen/emit-cli/tests/golden/auth/.cursor/skills/tokyo-filesystem-routes/: SKILL.md
crates/codegen/emit-cli/tests/golden/auth/.cursor/skills/tokyo-guidance-presentation/: SKILL.md
crates/codegen/emit-cli/tests/golden/auth/.cursor/skills/tokyo-streaming-binary/: SKILL.md
crates/codegen/emit-cli/tests/golden/auth/.github/workflows/: release.yml
crates/codegen/emit-cli/tests/golden/auth/.skills/tokyo-project-config/: SKILL.md
crates/codegen/emit-cli/tests/golden/auth/.tokyo/src/tokyo/: config.rs  types.rs
crates/codegen/emit-cli/tests/golden/auth/src/: cli.rs  presentation.rs
crates/codegen/emit-cli/tests/golden/auth/src/tokyo/: config.rs
crates/codegen/emit-cli/tests/golden/cli-coverage/: Cargo.toml
crates/codegen/emit-cli/tests/golden/cli-coverage/.skills/tokyo-project-layout/: SKILL.md
crates/codegen/emit-cli/tests/golden/cli-coverage/.tokyo/src/: main.rs
crates/codegen/emit-cli/tests/golden/cli-coverage/.tokyo/src/tokyo/: types.rs
crates/codegen/emit-cli/tests/golden/cli-coverage/src/: cli.rs  presentation.rs
crates/codegen/emit-cli/tests/golden/cli-coverage/src/commands/: custom.rs  guidance.rs
crates/codegen/emit-cli/tests/golden/cli-coverage/src/tokyo/commands/: items.rs  mod.rs  users.rs
crates/codegen/emit-cli/tests/golden/cli-types/: Cargo.toml
crates/codegen/emit-cli/tests/golden/cli-types/.cursor/skills/tokyo-agent-discovery/: SKILL.md
crates/codegen/emit-cli/tests/golden/cli-types/.cursor/skills/tokyo-scenarios-run/: SKILL.md
crates/codegen/emit-cli/tests/golden/cli-types/.tokyo/src/: cli.rs
crates/codegen/emit-cli/tests/golden/cli-types/.tokyo/src/tokyo/: types.rs
crates/codegen/emit-cli/tests/golden/cli-types/src/: middleware.rs
crates/codegen/emit-cli/tests/golden/cli-types/src/tokyo/: config.rs
crates/codegen/emit-cli/tests/golden/cli-types/src/tokyo/commands/: events.rs
crates/codegen/emit-cli/tests/golden/http-runtime/: Cargo.toml  README.md
crates/codegen/emit-cli/tests/golden/http-runtime/.cursor/skills/tokyo-filesystem-routes/: SKILL.md
crates/codegen/emit-cli/tests/golden/http-runtime/.cursor/skills/tokyo-request-bodies/: SKILL.md
crates/codegen/emit-cli/tests/golden/http-runtime/.cursor/skills/tokyo-scripting-protocol/: SKILL.md
crates/codegen/emit-cli/tests/golden/http-runtime/.skills/tokyo-deployment/: SKILL.md
crates/codegen/emit-cli/tests/golden/http-runtime/.tokyo/src/: cli.rs
crates/codegen/emit-cli/tests/golden/http-runtime/.tokyo/src/tokyo/: config.rs
crates/codegen/emit-cli/tests/golden/http-runtime/src/tokyo/: types.rs
crates/codegen/emit-cli/tests/golden/http-runtime/src/tokyo/commands/: default.rs
crates/codegen/emit-cli/tests/golden/openapi-coverage/: Cargo.toml  README.md
crates/codegen/emit-cli/tests/golden/openapi-coverage/.cursor/skills/tokyo-openapi-lifecycle/: SKILL.md
crates/codegen/emit-cli/tests/golden/openapi-coverage/.skills/tokyo-getting-started/: SKILL.md
crates/codegen/emit-cli/tests/golden/openapi-coverage/.tokyo/src/: cli.rs  main.rs
crates/codegen/emit-cli/tests/golden/openapi-coverage/.tokyo/src/tokyo/: config.rs  types.rs
crates/codegen/emit-cli/tests/golden/openapi-coverage/src/: main.rs
crates/codegen/emit-cli/tests/golden/openapi-coverage/src/tokyo/: config.rs  mod.rs  routes.rs
crates/codegen/emit-cli/tests/golden/openapi-coverage/src/tokyo/commands/: items.rs
crates/codegen/emit-cli/tests/golden/petstore/.cursor/skills/tokyo-auth-profiles/: SKILL.md
crates/codegen/emit-cli/tests/golden/petstore/.cursor/skills/tokyo-project-layout/: SKILL.md
crates/codegen/emit-cli/tests/golden/petstore/src/: cli.rs  presentation.rs
crates/codegen/emit-cli/tests/golden/petstore/src/commands/: custom.rs  guidance.rs
crates/codegen/emit-cli/tests/golden/petstore/src/tokyo/: types.rs
crates/codegen/emit-cli/tests/golden/petstore/src/tokyo/commands/: default.rs
crates/codegen/emit-cli/tests/golden/serialization/: README.md
crates/codegen/emit-cli/tests/golden/serialization/.tokyo/src/: cli.rs
crates/codegen/emit-cli/tests/golden/serialization/src/commands/: custom.rs  mod.rs
crates/codegen/emit-cli/tests/golden/serialization/src/tokyo/: types.rs
crates/codegen/import-openapi/: Cargo.toml
crates/codegen/import-openapi/src/: error.rs  lib.rs  naming.rs  normalize.rs  operation.rs  schema.rs  security.rs
crates/codegen/import-openapi/tests/: coverage.rs
crates/codegen/ir/: Cargo.toml
crates/codegen/ir/src/: api.rs  auth.rs  cli_behavior.rs  diff.rs  http.rs  id.rs  lib.rs  pagination.rs  sdk_behavior.rs  types.rs  validation.rs  websocket.rs
examples/: auth.yaml  cli-coverage.yaml  cli-types.yaml  http-runtime.yaml  (+3 more)
(+16 files in other folders)
