[package]
name = "tokyo-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Route-first framework for deterministic agent CLIs"
keywords = ["cli", "codegen", "framework", "openapi"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tokyo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
heck.workspace = true
tokyo-codegen-engine.workspace = true
tokyo-emit-cli.workspace = true
tokyo-ir.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha2.workspace = true
toml.workspace = true
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
yaml_serde.workspace = true
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
