[package]
name = "tokyo-import-openapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "OpenAPI importer for the Tokyo CLI framework"
keywords = ["cli", "codegen", "openapi"]
categories = ["development-tools"]

[dependencies]
tokyo-ir.workspace = true
heck.workspace = true
oas3 = { workspace = true, features = ["yaml-spec"] }
serde_json.workspace = true
thiserror.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
