[workspace]

[package]
name = "generated-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.1"
tokyo-cli-runtime = "=0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.18.1", features = ["serde"] }
